--- a/backend/config/kb.yaml
+++ b/backend/config/kb.yaml
@@ -1,25 +1,39 @@
+# This is the single source of truth for the app's knowledge.
+# (Person BAcl) uses this to build the availability/booking tools.
+# (Person BB/C) uses this to build the AI prompt's <kb> block.
+
+business_name: "Houston's Finest Mobile Detailing"
+
+service_area_zips:
+  - "77005"
+  - "77006"
+  - "77007"
+  - "77019"
+  - "77027"
+  - "77030"
+  - "77098"
+
 services:
-  - name: "Interior & Exterior Car Detail"
-    base_price_range: "$120-180"
-    typical_duration_hours: 3
-  - name: "Basic Wash & Vacuum"
-    base_price_range: "$40-70"
-    typical_duration_hours: 1
-  - name: "Full Ceramic Coating"
-    base_price_range: "$700-1200"
-    typical_duration_hours: 6
+  - id: "ext_wash"
+    name: "Exterior Wash"
+    priceRange: [40, 60]
+    durationMins: 45
+    description: "A thorough outside wash and dry."
+  - id: "full_detail"
+    name: "Full Detail"
+    priceRange: [180, 240]
+    durationMins: 180
+    description: "Complete interior and exterior cleaning."
+  - id: "int_only"
+    name: "Interior Only"
+    priceRange: [100, 150]
+    durationMins: 120
+    description: "Deep clean of the cabin, vacuum, and wipe-down."
 
-service_area:
-  city: "Houston"
-  radius_miles: 25
-  description: "We serve most of the Houston metro area within ~25 miles of downtown."
-
-availability_rules:
-  weekdays:
-    start_hour: 9
-    end_hour: 18
-  saturday:
-    start_hour: 10
-    end_hour: 16
-  sunday:
-    closed: true
+availability:
+  - day: "weekday"
+    open: "09:00"
+    close: "17:00"
+  - day: "saturday"
+    open: "10:00"
+    close: "15:00"
