--- a/backend/package.json
+++ b/backend/package.json
@@ -9,18 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.68.0",
+    "js-yaml": "^4.1.0",
+    "next": "^15",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "^15"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "^15",
     "postcss": "^8",
     "tailwindcss": "^3.4.0",
-    "eslint": "^8",
-    "eslint-config-next": "^15"
+    "typescript": "^5"
   }
 }
