--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "eslint-config-next": "^15",
     "postcss": "^8",
     "tailwindcss": "^3.4.0",
+    "tsx": "^4.20.6",
     "typescript": "^5"
   }
 }
