--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.68.0",
+    "clsx": "^2.1.1",
     "js-yaml": "^4.1.0",
     "next": "^15",
     "react": "^18",
