--- a/backend/config/kb.yaml
+++ b/backend/config/kb.yaml
@@ -21,7 +21,7 @@ services:
     description: "A thorough outside wash and dry."
   - id: "full_detail"
     name: "Full Detail"
-    priceRange: [180, 240]
+    priceRange: [120, 180]
     durationMins: 180
     description: "Complete interior and exterior cleaning."
   - id: "int_only"
@@ -33,7 +33,9 @@ services:
 availability:
   - day: "weekday"
     open: "09:00"
-    close: "17:00"
+    close: "18:00"
   - day: "saturday"
     open: "10:00"
-    close: "15:00"
+    close: "16:00"
+  - day: "sunday"
+    closed: true
