--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ ANTHROPIC_API_KEY=
 # Option 1: Resend (recommended)
 RESEND_API_KEY=
 EMAIL_FROM=no-reply@yourdomain.com
+OWNER_EMAIL=owner@yourdomain.com
 
 # Option 2: SMTP (alternative)
 # SMTP_HOST=smtp.gmail.com
@@ -13,6 +14,7 @@ EMAIL_FROM=no-reply@yourdomain.com
 # SMTP_USER=
 # SMTP_PASS=
 # EMAIL_FROM=no-reply@yourdomain.com
+# OWNER_EMAIL=owner@yourdomain.com
 
 # Database (when added)
 # DATABASE_URL=postgres://user:pass@host:5432/dbname
